@@ -6,6 +6,7 @@ and this project adheres to [Semantic Versioning](http://semver.org/spec/v2.0.0.
 
 ## [0.4.0]
 - Update README documentation to clarify what HCLI Core does
+- Update nw sample app to include network allocation for a specific network.
 
 ## [0.3.0]
 - Update to clarify the README.
